chore: fix scrollbar on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -19,17 +19,20 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
   background-color: white !important;
 }
 
 @layer base {
   html {
-    @apply 2xl:text-xl 3xl:text-2xl 4xl:text-3xl 5xl:text-5xl;
+     @apply 2xl:text-xl 3xl:text-2xl 4xl:text-3xl 5xl:text-5xl;
   }
 }
 
 @media print {
   body {
-    zoom: 1; /* Ensure zoom is set correctly */
+    zoom: 1;
   }
 }
